--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "ogl": "^1.0.11",
+    "posthog-js": "^1.297.3",
+    "posthog-node": "^4.18.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0"
